--- a/car_showroom/requirements.txt
+++ b/car_showroom/requirements.txt
@@ -2,6 +2,9 @@ backports.shutil-get-terminal-size==1.0.0
 decorator==4.1.2
 Django==1.11.2
 enum34==1.1.6
+factory-boy==2.9.2
+Faker==0.8.10
+ipaddress==1.0.19
 ipdb==0.10.3
 ipython==5.5.0
 ipython-genutils==0.2.0
@@ -9,12 +12,15 @@ lxml==4.1.1
 pathlib2==2.3.0
 pexpect==4.3.1
 pickleshare==0.7.4
+Pillow==5.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+python-dateutil==2.6.1
 pytz==2017.3
 scandir==1.6
 simplegeneric==0.8.1
 six==1.11.0
+text-unidecode==1.1
 traitlets==4.3.2
 wcwidth==0.1.7
