--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 adium-theme-ubuntu==0.3.4
+amqp==1.4.9
+anyjson==0.3.3
 astroid==1.4.4
 attrs==15.2.0
 backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.4.1
+billiard==3.3.0.23
 blinker==1.3
+celery==3.1.26.post2
 certifi==2017.11.5
 chardet==3.0.4
 colorama==0.3.9
@@ -13,6 +17,7 @@ decorator==4.1.2
 dirspec==13.10
 Django==1.11.2
 django-bootstrap3==9.1.0
+django-celery==3.2.2
 django-debug-toolbar==1.9.1
 django-redis==4.8.0
 duplicity==0.7.6
@@ -28,6 +33,7 @@ ipaddress==1.0.19
 ipdb==0.10.3
 ipython==5.5.0
 ipython-genutils==0.2.0
+kombu==3.0.37
 lazy-object-proxy==1.2.1
 lockfile==0.12.2
 logilab-common==1.1.0
@@ -72,6 +78,7 @@ ubuntu-kylin-software-center==1.3.10
 unity-lens-photos==1.0
 urllib3==1.22
 vcrpy==1.11.1
+vine==1.1.4
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.8.2
